--- a/weatherProject/src/App.css
+++ b/weatherProject/src/App.css
@@ -4,7 +4,7 @@
   padding: 0;
   font-family: "Nanum Gothic", serif;
   font-weight: 100;
-  color: #D3D3D3;
+  color: #e0dfdf;
 }
 
 .tg {
@@ -65,7 +65,7 @@
   background-color: #fff;
   border-radius: 10px;
   background: none;
-  box-shadow: 5px 5px 10px #506472;
+  box-shadow: 5px 5px 10px #68747c;
   -webkit-backdrop-filter: blur(30px);
           backdrop-filter: blur(30px);
   opacity: 90%;
@@ -106,7 +106,7 @@
   margin: 0 auto;
   border-radius: 10px;
   background: none;
-  box-shadow: 5px 5px 10px #506472;
+  box-shadow: 5px 5px 10px #68747c;
   -webkit-backdrop-filter: blur(30px);
           backdrop-filter: blur(30px);
   opacity: 90%;
@@ -141,7 +141,7 @@
   height: 20.5vw;
   margin: 0 auto;
   border-radius: 20px;
-  background: linear-gradient(#bdc5cc, #0185f8);
+  background: linear-gradient(#ccc8bd, #0185f8);
   padding: 20px;
   box-sizing: border-box;
 }
@@ -237,7 +237,7 @@
   box-sizing: border-box;
   border-radius: 10px;
   background: none;
-  box-shadow: 5px 5px 10px #506472;
+  box-shadow: 5px 5px 10px #68747c;
   -webkit-backdrop-filter: blur(30px);
           backdrop-filter: blur(30px);
   opacity: 90%;
@@ -301,7 +301,7 @@
   height: 63%;
   border-radius: 10px;
   background: none;
-  box-shadow: 5px 5px 10px #506472;
+  box-shadow: 5px 5px 10px #68747c;
   -webkit-backdrop-filter: blur(30px);
           backdrop-filter: blur(30px);
   opacity: 90%;
@@ -319,15 +319,20 @@
   stroke: #0088ff;
   fill: #ffffff;
 }
+.body .container .secondSection .b1 .map .koreaMap.active {
+  fill: #0088ff;
+  stroke: #ffa600;
+  stroke-width: 3;
+}
 .body .container .secondSection .b1 .map .koreaMap:hover {
-  fill: #046b1e;
+  fill: #0088ff;
   cursor: pointer;
 }
 .body .container .secondSection .b2 {
   width: 100%;
   border-radius: 10px;
   background: none;
-  box-shadow: 5px 5px 10px #506472;
+  box-shadow: 5px 5px 10px #68747c;
   -webkit-backdrop-filter: blur(30px);
           backdrop-filter: blur(30px);
   opacity: 90%;
@@ -384,7 +389,7 @@
   width: 32%;
   border-radius: 10px;
   background: none;
-  box-shadow: 5px 5px 10px #506472;
+  box-shadow: 5px 5px 10px #68747c;
   -webkit-backdrop-filter: blur(30px);
           backdrop-filter: blur(30px);
   opacity: 90%;
@@ -468,7 +473,7 @@
   height: 30%;
   border-radius: 10px;
   background: none;
-  box-shadow: 5px 5px 10px #506472;
+  box-shadow: 5px 5px 10px #68747c;
   -webkit-backdrop-filter: blur(30px);
           backdrop-filter: blur(30px);
   opacity: 90%;
@@ -504,7 +509,7 @@
   height: 30%;
   border-radius: 10px;
   background: none;
-  box-shadow: 5px 5px 10px #506472;
+  box-shadow: 5px 5px 10px #68747c;
   -webkit-backdrop-filter: blur(30px);
           backdrop-filter: blur(30px);
   opacity: 90%;
@@ -816,7 +821,7 @@
   position: absolute;
 }
 .body.dark .container .secondSection .b1 .map .koreaMap {
-  stroke: #303136;
+  stroke: #e0dfdf;
   fill: #ffffff;
 }
 .body.dark .container .secondSection .b1 .map .koreaMap:hover {
@@ -1024,356 +1029,4 @@
   width: 200px;
   word-break: break-all;
   border-bottom: 2px solid #646363;
-}
-
-@media (max-width: 520px) {
-  body {
-    height: -moz-fit-content;
-    height: fit-content;
-    padding-bottom: 5vw;
-  }
-  body .container .header p {
-    font-size: 4vw;
-    text-align: center;
-    margin: 0;
-    border-radius: 20px;
-  }
-  body .container .main {
-    display: block;
-  }
-  body .container .main .firstSection {
-    margin-top: -7vw;
-    width: 100%;
-    height: -moz-fit-content;
-    height: fit-content;
-    display: flex;
-    align-items: center;
-    padding: 0 !important;
-    box-sizing: border-box;
-  }
-  body .container .main .firstSection .selectTime {
-    width: 100%;
-    height: 20px;
-    margin: 0 auto;
-    border-radius: 20px;
-    background-color: #303136;
-    border-radius: 10px;
-    box-shadow: 5px 5px 10px #535353;
-    margin-bottom: 4vw;
-  }
-  body .container .main .firstSection .selectTime .selectValuebox {
-    width: 60%;
-    height: 10px;
-    text-align: center;
-    display: flex;
-    justify-content: space-between;
-    margin-top: -2.5vw;
-  }
-  body .container .main .firstSection .selectTime .selectValuebox .yearBox {
-    display: flex;
-  }
-  body .container .main .firstSection .selectTime .selectValuebox .yearBox .selectValue {
-    text-align: center;
-    width: 100%;
-    height: 20px;
-    border-radius: 30px;
-  }
-  body .container .main .firstSection .selectTime .selectValuebox .mapBox .mapSelect {
-    text-align: center;
-    width: 100%;
-    height: 20px;
-    border-radius: 30px;
-  }
-  body .container .main .firstSection .realtimeWeatherArea {
-    width: 47%;
-    height: 250px;
-    margin: 0 auto;
-    border-radius: 20px;
-    background: linear-gradient(#bdc5cc, #0185f8);
-    padding: 20px;
-    box-sizing: border-box;
-  }
-  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather {
-    height: 100%;
-    font-size: 4vw;
-  }
-  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather h2 {
-    font-family: "Nanum Gothic", serif;
-    font-weight: 600;
-    color: white;
-    text-align: center;
-  }
-  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul {
-    width: 10vw;
-    height: 100%;
-    margin: auto;
-    list-style: none;
-    margin-top: 2vh;
-  }
-  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .icon {
-    width: 20vw;
-    height: 10vh;
-    margin: 0 auto;
-    margin-left: -4vw;
-    background-image: url(./assets/img/sunny.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .temperature {
-    text-align: center;
-    font-size: 8vw;
-    font-weight: bold;
-    text-shadow: 7px 7px 20px #1C1B20;
-    margin-top: -10vw;
-    margin-left: -3vw;
-  }
-  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info {
-    width: 300%;
-    margin-left: -9.6vw;
-  }
-  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB {
-    margin: auto;
-  }
-  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB p {
-    font-size: 0.7vw;
-  }
-  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB .windIcon {
-    width: 3vh;
-    height: 6vw;
-    display: block;
-    margin: auto;
-    background-image: url(./assets/img/Wind.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB .humidityIcon {
-    width: 3vh;
-    height: 6vw;
-    display: block;
-    margin: auto;
-    background-image: url(./assets/img/Dew.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB .VisibilityIcon {
-    width: 3vh;
-    height: 6vw;
-    display: block;
-    margin: auto;
-    background-image: url(./assets/img/Rain2.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  body .container .main .firstSection .perceived {
-    width: 47%;
-    height: 250px;
-    margin: 0 auto;
-    border-radius: 20px;
-    background: linear-gradient(#ccc8bd, #ffab04, #ff8604);
-    box-sizing: border-box;
-    padding: 2vw;
-  }
-  body .container .main .firstSection .perceived .thermometerIconbox {
-    width: 100%;
-    height: 150px;
-    position: relative;
-  }
-  body .container .main .firstSection .perceived .thermometerIconbox .thermometerIcon {
-    margin-top: 14vw;
-    margin-left: 1vw;
-    width: 17vw;
-    height: 10vh;
-    background-image: url(./assets/img/ThermometerQuarter.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  body .container .main .firstSection .perceived .thermometerIconbox div {
-    text-align: center;
-    font-family: "Nanum Gothic", serif;
-    font-weight: 600;
-    color: white;
-    font-size: 5vw;
-    font-weight: bold;
-    position: absolute;
-    top: 3vw;
-    left: 9vw;
-  }
-  body .container .main .firstSection .perceived .thermometerIconbox div p {
-    margin-top: 1vw;
-    font-size: 4vw;
-    font-weight: bold;
-  }
-  body .container .main .firstSection .perceived .suggestion {
-    text-align: center;
-  }
-  body .container .main .firstSection .perceived .suggestion .suggestionT {
-    font-size: 4vw;
-    font-weight: bold;
-    margin-top: 2vh;
-    margin-bottom: 1vh;
-  }
-  body .container .main .firstSection .perceived .suggestion .suggestionM {
-    font-size: 2.5vw;
-  }
-  body .container .main .secondSection {
-    width: 100%;
-    height: 63%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    padding: 0;
-  }
-  body .container .main .secondSection .b1 {
-    width: 100%;
-    height: 50%;
-    margin: 0 auto;
-    margin-top: -7vw;
-    background-color: #303136;
-    border-radius: 10px;
-    box-shadow: 5px 5px 10px #535353;
-    background-color: #1C1B20;
-    overflow: hidden;
-    position: relative;
-    opacity: 90%;
-  }
-  body .container .main .secondSection .b1 .map {
-    width: 300px;
-    height: 250px;
-  }
-  body .container .main .secondSection .b1 .map .koreaMap {
-    stroke: rgb(159, 255, 171);
-    fill: #ffffff;
-  }
-  body .container .main .secondSection .b1 .map .koreaMap:hover {
-    fill: #06ab7c;
-    cursor: pointer;
-  }
-  body .container .main .secondSection .b2 {
-    width: 100%;
-    margin: 0 auto;
-    margin-top: -17vw;
-    background-color: #303136;
-    border-radius: 10px;
-    box-shadow: 5px 5px 10px #535353;
-    height: 35%;
-  }
-  body .container .main .secondSection .b2 .chart {
-    height: 150px !important;
-  }
-  body .container .main .secondSection .b2 .chartInfo {
-    width: 88vw;
-    justify-content: space-between;
-    margin-left: 4vw;
-  }
-  body .container .main .secondSection .b2 .chartInfo .text-center {
-    margin-top: -0.6vw;
-    width: 20vw !important;
-    height: 20vw !important;
-  }
-  body .container .main .secondSection .b2 .chartInfo .text-center .text-sm {
-    margin-left: -3vw;
-    font-size: 2.3vw;
-    text-align: center;
-  }
-  body .container .main .thirdSection {
-    margin-top: 5vw;
-    width: 100%;
-    height: -moz-fit-content;
-    height: fit-content;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-  }
-  body .container .main .thirdSection .c {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-  }
-  body .container .main .thirdSection .c .c2-1 {
-    width: 32%;
-    height: 170px;
-    box-sizing: border-box;
-    background-color: black;
-    background-color: #303136;
-    border-radius: 10px;
-    box-shadow: 5px 5px 10px #535353;
-  }
-  body .container .main .thirdSection .c .c2-1 .circleperTitle {
-    text-align: center;
-    line-height: 50px;
-    font-size: 10px;
-    font-weight: bold;
-    font-family: "Nanum Gothic", serif;
-  }
-  body .container .main .thirdSection .c .c2-1 .circleBox {
-    width: 100%;
-    position: relative;
-  }
-  body .container .main .thirdSection .c .c2-1 .circleBox .circle {
-    display: block;
-    width: 28vw;
-    height: 28vw;
-    margin: auto;
-    margin-top: -6vw;
-  }
-  body .container .main .thirdSection .c .c2-1 .circleBox .circleper {
-    position: absolute;
-    top: 12.5vw;
-    left: 7.4vw;
-    font-size: 7vw;
-    font-weight: bold;
-    text-shadow: 10px 10px 10px #1C1B20;
-    font-family: "Nanum Gothic", serif;
-  }
-  body .container .main .thirdSection .c1 {
-    width: 100%;
-    height: 150px;
-    background-color: #303136;
-    border-radius: 10px;
-    box-shadow: 5px 5px 10px #535353;
-    padding: 30px;
-    box-sizing: border-box;
-    position: relative;
-    margin-top: 5vw;
-  }
-  body .container .main .thirdSection .c1 .tgtitle {
-    width: 65%;
-    line-height: 10vw;
-    font-size: 3vw;
-    text-align: center;
-    font-weight: bold;
-  }
-  body .container .main .thirdSection .c1 .temperatureGraph {
-    position: absolute;
-    top: 10vw;
-    left: 0;
-    border-radius: 20px;
-    margin: auto;
-    display: block;
-    width: 90%;
-    height: 120px;
-  }
-  body .container .main .thirdSection .c2 {
-    margin-top: 4vw;
-    width: 100%;
-    height: 16vh;
-    background-color: #303136;
-    border-radius: 10px;
-    box-shadow: 5px 5px 10px #535353;
-    margin-top: 5vw;
-    margin-bottom: 5vw;
-  }
-  body .container .main .thirdSection .c2 .tgtitle2 {
-    font-size: 3vw !important;
-  }
-  body .container .main .thirdSection .c2 .customtbody {
-    font-size: 0.8rem;
-    /* 모바일에서 글자 크기 조정 */
-  }
 }/*# sourceMappingURL=App.css.map */
